crates/rattler_shell/src/snapshots/rattler_shell__tests__activation_script_bash.snap
---
source: crates/rattler_shell/src/lib.rs
expression: script
---
export PATH="__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
export CONDA_PREFIX="__PREFIX__"
. "__PREFIX__/etc/conda/activate.d/script1.sh"
